My Vans Back End and some front

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -43,6 +43,24 @@ a{
   }
 }
 
+
+
+.app-sidebar-link-active{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin: 25px 0px;
+  border-radius: 10px;
+  width: 40px;
+  height: 40px;
+  font-size: 25px;
+  text-decoration: none;
+  box-shadow: 0.8rem 0.8rem 1.4rem var(--greyLight-2), -0.2rem -0.2rem 1.8rem var(--white);
+  transition: all 0.3s ease-in-out;
+  color: #B1B695;
+}
+
 .dashboard-cards {
   margin: 0 auto;
   max-width: 1500px;
