--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -12,7 +12,7 @@
       <%end%>
 
       <%= link_to dashboard_path do %>
-        <div class="app-sidebar-link">
+        <div class="app-sidebar-link-active">
           <i class="fa-solid fa-calendar"></i>
         </div>
       <%end%>
