--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -74,7 +74,6 @@
 
 .card-trip-dashboard p {
   font-size: 12px;
-  opacity: .7;
   margin: 0;
 }
 
@@ -95,7 +94,7 @@
 .days {
   position: absolute;
   top: 85%;
-  left: 38.5%;
+  left: 33%;
   background-color: rgba(255,255,255,0.6);
   font-size: 12px;
   border-radius: 20px;
@@ -117,4 +116,36 @@
   font-weight: 700;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+#active-renting{
+  position: absolute;
+  top: 85%;
+  margin: 0px auto;
+  background-color: rgba(24, 235, 31, 0.5);
+  font-size: 12px;
+  border-radius: 20px;
+  flex-shrink: 0;
+  padding: 6px 16px;
+  font-weight: 700;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  backdrop-filter: blur(5px);
+}
+
+
+#passed-booking{
+  position: absolute;
+  margin:0px auto;
+  top: 85%;
+  background-color: rgba(252, 255, 0,0.65);
+  font-size: 12px;
+  border-radius: 20px;
+  flex-shrink: 0;
+  padding: 6px 16px;
+  font-weight: 700;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  backdrop-filter: blur(5px);
+
 }
