--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -12,7 +12,7 @@
               <%= simple_form_for [@booking, @review] do |f| %>
                 <%= f.input :content %>
                 <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience", input_html: {data: {controller: "star-rating"}} %>
-                <%= f.submit "Submit review", class: "btn btn-classic-new" %>
+                <%= f.submit "Submit review", class: "btn btn-classic-new", data: { controller: 'alert', action: 'click->alert#hop'} %>
               <% end %>
         </div>
 
