--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -101,18 +101,18 @@
           <p><i class="fa-solid fa-kitchen-set"></i></i> Kitchen</p>
           <p><i class="fa-solid fa-shower"></i></i> Shower</p>
         </div>
-        <div class="reviews border-bottom border-top">
+        <div class="reviews border-top">
           <h3 style="margin-top:20px"><span class="mov" style="font-size:22px;"> <i class="fa-solid fa-star" style="font-size:15px"></i> <%= @van.bookings.count - 1 %> Comments </span></h3>
           <% @van.bookings.each do |booking| %>
             <%if booking.review%>
-            <div class="review pe-5" style="margin-bottom:15px;margin-left:25px">
-              <div class="d-flex">
-                <%= "⭐️" * booking.review.rating %>
-              </div>
-                <%= booking.review.content %>
-            </div>
-            <%else%>
-            <%end%>
+
+          <%= "⭐️" * booking.review.rating %>
+          <div class="d-flex align-items-center" style="margin-bottom:15px">
+            <p style="margin-bottom: 1px;margin-left: 0px;"><em>"<%= booking.review.content %>"</em></p>
+            <p class="d-flex align-items-center justify-content-between" style="margin-bottom: 1px;">- <%= booking.user.first_name  %> </p> <span style="font-size:10px;color:#005FA3;"> <%= booking.start_date.strftime("%B %Y")  %></span>
+          </div>
+          <%else%>
+          <%end%>
           <%end %>
         </div>
       </div>
@@ -123,16 +123,24 @@
       <div class="card card-trip" style="background-color:white;margin-top:15px;position:sticky;top:90px">
         <div class="card-body">
           <h6 class="card-title" style="text-align:"><%=@van.price_per_day%>€ / nuit</h6>
-          <div data-controller="flatpickr" data-flatpickr-dates-value="<%= @van.flatpickr_booked_dates_object %>">
-
             <div data-controller="dynamic-booking-price" data-dynamic-booking-price-price-value="<%= @van.price_per_day %>">
               <%= simple_form_for [@van, @booking],
-                html: { data: { controller: 'flatpickr', class: 'datepicker', action: "submit->flatpickr#send"} } do |f| %>
-                <%= f.input :start_date, as: :string, input_html: { data: {
-                  flatpickr_target: 'startDateInput',
-                  dynamic_booking_price_target: 'startDateInput',
-                  action: 'change->dynamic-booking-price#updatePrice'
-                  }} %>
+                                  html: {
+                                    data: {
+                                      controller: 'flatpickr',
+                                      action: "submit->flatpickr#send",
+                                      flatpickr_dates_value: @van.flatpickr_booked_dates_object
+                                    }
+                                  } do |f| %>
+                <%= f.input :start_date,
+                            as: :string,
+                            input_html: {
+                              data: {
+                                flatpickr_target: 'startDateInput',
+                                dynamic_booking_price_target: 'startDateInput',
+                                action: 'change->dynamic-booking-price#updatePrice'
+                              }
+                            } %>
                 <%= f.input :end_date, as: :string,input_html: { data: { flatpickr_target: 'endDateInput',dynamic_booking_price_target: 'endDateInput', action: 'change->dynamic-booking-price#updatePrice'}} %>
                 <p id="total-price">
                   <strong>Total price:</strong> <span data-dynamic-booking-price-target="priceHolder"><%= @van.price_per_day %></span> €
@@ -147,23 +155,6 @@
   </div>
 </div>
 
-
-
-<div class="container" style="margin-top:20px">
-  <h3><span class="mov" style="font-size:22px;"> <i class="fa-solid fa-star" style="font-size:15px"></i> <%= @van.bookings.count - 1 %> Comments </span></h3>
-  <div class="reviews row">
-  <% @van.bookings.each do |booking| %>
-    <%if booking.review%>
-    <div class="review col-6">
-      <div class="d-flex">
-        <%= "⭐️" * booking.review.rating %>
-      </div>
-    </div>
-    <%else%>
-    <%end%>
-  <%end %>
-  </div>
-</div>
 
 
  <div class="container van-show border-top d-flex justify-content-center flex-column"  style="margin-top:20px; margin-bottom:40px">
