--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -148,6 +148,7 @@
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   backdrop-filter: blur(5px);
+}
 
 .trash-place{
 justify-content: space-between;
