--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,6 +1,6 @@
 
 <div style="display:block;">
-
+<%= render 'shared/banner' %>
 <div class="app-container" style="padding-top: 100px; padding-bottom: 30px">
 
   <div class="app-content">
