--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -16,7 +16,13 @@
           <i class="fa-solid fa-calendar"></i>
         </div>
       <%end%>
-    </div>
+          <%= link_to error_path do %>
+        <div class="app-sidebar-link">
+          <i class="fa-solid fa-gift"></i>
+        </div>
+      <%end%>
+
+  </div>
 
         <div class="vans-container" style = "overflow-x: scroll;">
           <div class="vans-container-header">
