--- a/app/views/pages/my_vans.html.erb
+++ b/app/views/pages/my_vans.html.erb
@@ -12,6 +12,11 @@
           <i class="fa-solid fa-calendar"></i>
         </div>
       <%end%>
+      <%= link_to error_path do %>
+        <div class="app-sidebar-link">
+          <i class="fa-solid fa-gift"></i>
+        </div>
+      <%end%>
     </div>
   </div>
 
