--- a/app/assets/stylesheets/pages/_error.scss
+++ b/app/assets/stylesheets/pages/_error.scss
@@ -1,42 +1,64 @@
 .error{
-  @import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700");
-body {
-    background-color: #330000;
-    font-family: "Montserrat", sans-serif;
-}
-article {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    box-sizing: border-box;
-}
-aside {
-    flex: 0 0 75vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 2em;
-    box-sizing: border-box;
-}
-h1,
-p {
-    color: #fff;
-    font-size: 3em;
-    padding: 0;
-    margin: 0;
-}
-p {
-    font-size: 1em;
-}
-#render_error {
-    fill: none;
-    stroke: #f00;
-    stroke-width: 3;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    stroke-miterlimit: 10;
+  @import url('https://fonts.googleapis.com/css?family=Lato|Roboto+Slab');
+
+* {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+.centered {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  margin-bottom: 50px;
+  font-family: 'Lato', sans-serif;
+  font-size: 50px;
+}
+
+.message {
+  display: inline-block;
+  line-height: 1.2;
+  transition: line-height .2s, width .2s;
+  overflow: hidden;
+}
+
+.message,
+.hidden {
+  font-family: 'Roboto Slab', serif;
+  font-size: 18px;
+}
+
+.hidden {
+  color: #FFF;
+}
+
+
+.rotate {
+  animation: rotation 4s;
+}
+.linear {
+  animation-timing-function: linear;
+}
+.infinite {
+  animation-iteration-count: infinite;
+}
+@keyframes rotation {
+  from {
+      transform: rotate(0deg);
+  }
+  to {
+      transform: rotate(359deg);
+  }
+}
+canvas {
+	cursor: crosshair;
+	display: block;
+}
 }
