--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -18,7 +18,7 @@
       <img src="<%= cl_image_path @van.photos[0].key%>" alt="" style="width:100%; height:100%;border-radius: 5px;">
     </div>
     <div class="cards" style="height:400px;width:50%">
-      <% @van.photos.each do |photo| %>
+      <% @van.photos.drop(1).each do |photo| %>
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path photo.key%>)">
         </div>
         <% end %>
@@ -102,7 +102,13 @@
           <p><i class="fa-solid fa-shower"></i></i> Shower</p>
         </div>
         <div class="reviews border-top">
-          <h3 style="margin-top:20px"><span class="mov" style="font-size:22px;"> <i class="fa-solid fa-star" style="font-size:15px"></i> <%= @van.bookings.count - 1 %> Comments </span></h3>
+        <% @review_count = 0  %>
+        <% @van.bookings.each { |booking| @review_count += 1 if booking.review}  %>
+          <% if @review_count < 2 %>
+            <h3 style="margin-top:20px"><span class="mov" style="font-size:22px;"> <i class="fa-solid fa-star" style="font-size:15px"></i> <%= @review_count %> Comment </span></h3>
+          <% else %>
+            <h3 style="margin-top:20px"><span class="mov" style="font-size:22px;"> <i class="fa-solid fa-star" style="font-size:15px"></i> <%= @review_count %> Comments </span></h3>
+          <% end %>
           <% @van.bookings.each do |booking| %>
             <%if booking.review%>
 
