--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -16,23 +16,25 @@
   }
 }
 
-.days-review{
+#days-review{
   position: absolute;
   top: 90%;
   left: 29.5%;
   align-items: center;
-  background-color: rgba(255,255,255,1);
+  background-color: rgba(0, 52, 89,0.5);
   font-size: 12px;
   border-radius: 20px;
   flex-shrink: 0;
   padding: 6px 16px;
   font-weight: 700;
-  color: #003459;
+  color: white;
   transition: 0.3;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  backdrop-filter: blur(5px);
 
   &:hover{
     opacity: 1;
-    transform: scale(1.1)
+    transform: scale(1.05)
   }
 }
 
