--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -39,7 +39,6 @@
             <%end%>
               <p class="rentals-to-come">Upcoming Rentals <em>  (<%=@count%>)</em></p>
             </div>
-            <p class="time"><%= Time.now().to_s.split(" ")[0] %></p>
           </div>
 
            <% if @count == 0 %>
@@ -141,10 +140,10 @@
                       <p class="card-text-dashboard" style="color: #003459;"> <%= booking.van.brand %> -  <%= booking.van.location %></p>
                     </div>
                     <div class="d-flex flex-row justify-content-around">
-                      <p><span style="color: #005FA3; font-size: 14px; font-weight: 400;"><%= booking.start_date %> - <%= booking.end_date %></span></p>
+                      <p><span style="color: #005FA3; font-size: 14px; font-weight: 400;"><%= booking.start_date.strftime('%d %b') %> - <%= booking.end_date.strftime('%d %b') %></span></p>
                         <% unless booking.review %>
-                          <p class= "days-review">
-                            <%= link_to "add a review", new_booking_review_path(booking.id), style: 'text-decoration: none; color:#white'%>
+                          <p id= "days-review">
+                            <%= link_to "Add a review", new_booking_review_path(booking.id), style: 'text-decoration: none; color:white'%>
                           </p>
                         <% end %>
                     </div>
