--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -4,6 +4,6 @@
   <div class=" banner-position-d container">
     <h1>Welcome <%= current_user.first_name %></h1>
     <p>Manage your bookings.</p>
-
+    <p class="time"><%= Time.now().strftime('%d %B %Y') %></p>
   </div>
 </div>
