--- a/app/assets/stylesheets/components/_icon.scss
+++ b/app/assets/stylesheets/components/_icon.scss
@@ -1,5 +1,8 @@
 .poubelle {
-  color: #ff0000d3
+  color: rgba(255, 0, 0, 0.6);
+  position: absolute;
+  top: 8px;
+  right: 8px;
 }
 
 .poubelle:hover {
