Little modif on show

--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -163,7 +163,7 @@
 
 
 
- <div class="container van-show border-top d-flex justify-content-center flex-column"  style="margin-top:20px; margin-bottom:40px">
+ <div class="container van-show border-top d-flex justify-content-center flex-column"  style="margin-top:20px; margin-bottom:40px; width:80%">
   <div style="margin-top:20px ">
     <h4>Van's location</h4>
     <p><i class="fa-solid fa-location-dot"></i> <%= @van.location%></p>
