--- a/app/views/pages/loading.html.erb
+++ b/app/views/pages/loading.html.erb
@@ -1,32 +1,6 @@
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <script src="jquery-2.1.4.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-  </head>
-  <body>
-    <div class="content">
-
-<div class="error">
-
-<section class="centered">
-  <h1 style= "font-size:90px" >500 Server Error</h1>
-  <div style= "padding-left:550px"class="container">
-    <span class="message" id="js-whoops"></span> <span class="message" id="js-appears">Ohhhh mince ...</span> <span class="message" id="js-error"></span> <span class="message" id="js-apology"></span>
-  </div>
-</section>
-
-<img src="https://auxmerveilleux.com/clapham/440/croissant.jpg" class="rotate linear infinite" width="200" height="200" style="position:absolute;top:80px;right:40px" />
-<img src="https://www.aldi.lu/content/aldi/luxembourg/promotions/source-localenhancement/2019/2019-01/2019-01-02/vast_assortiment/1414/1/0/_jcr_content/assets/imported-images/BILD_INTERNET5/1414_PRIMARY_0_nl-fr-de_Chocoladekoek_met_patisseriecreme_geenmerk.png/_jcr_content/renditions/opt.1250w.png.res/1661133038921/opt.1250w.png" class="rotate linear infinite" width="200" height="200" style="position:absolute;top:80px;left:40px" />
-<img src="https://www.maisongrangier.com/wp-content/uploads/2021/09/Pain-Aux-Raisins.png" class="rotate linear infinite" width="200" height="200" style="position:absolute;bottom:50px;right:40px" />
-<img src="https://aux3petitschoux.com/580-large_default/chausson-aux-pommes.jpg" class="rotate linear infinite" width="200" height="200" style="position:absolute;bottom:50px;left:40px" />
-</div>
-    </div>
-
-
-
-
-    <div class="loading" style:="padding-top:500px">
-  <body>
+<html lang="en">
+<div class="loading">
+  <body style="background-color: #3ABC98;">
     <div id="wrapper">
       <div id="car-body">
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -136,10 +110,4 @@
     </div>
   </body>
   </div>
-
-    <script>
-        $(window).on("load",function(){
-          $(".loading").fadeOut("slow");
-        });
-    </script>
-  </body>
+</html>
