--- a/app/views/pages/my_vans.html.erb
+++ b/app/views/pages/my_vans.html.erb
@@ -1,4 +1,6 @@
-<div class="my_vans-container" style="padding-top: 70px">
+<%= render 'shared/banner_bis' %>
+
+<div class="my_vans-container" style="padding-top: 10px">
 
   <div class="my_vans-sidebar-container">
     <div class="my_vans-sidebar">
@@ -24,7 +26,6 @@
     <div class="my_vans-content">
       <div class="my_vans-header">
         <h1 class="my_vans-title">Your Rentals</h1>
-        <p class="time"><%= Time.now().to_s.split(" ")[0] %></p>
       </div>
       <div class="my_vans-currently-container">
         <h2 class="my_vans-subtitle">Currently Booked</h2>
