--- a/app/views/shared/_banner_bis.html.erb
+++ b/app/views/shared/_banner_bis.html.erb
@@ -5,7 +5,7 @@
   <div class="d-flex justify-content-between align-items-center">
     <div>
       <h1>Welcome<%= current_user.first_name %></h1>
-      <p>Manage your bookings</p>
+      <p>Manage your rentals</p>
     </div>
     <div>
       <p class="time"><%= Time.now().strftime('%d %B %Y') %></p>
